--- a/notopedia/src/components/Homepage.css
+++ b/notopedia/src/components/Homepage.css
@@ -92,7 +92,11 @@ select {
   background-color: #f1f1f1;
 }
 
-
+.body-p{
+  width: 100%;
+  height: 100%;
+  word-wrap: break-word;
+}
 .fab {
   position: fixed;
   bottom: 30px;
@@ -124,6 +128,19 @@ select {
   position: relative;
   width: 100%;
   max-width: 400px;
+  top: 10px;
+  right: 10px;
+  font-weight: bold;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.modal-view-content{
+  padding: 20px;
+  position: relative;
+  width: 100%;
+  max-width: 550px;
+  max-height: 330px;
   top: 10px;
   right: 10px;
   font-weight: bold;
